updated css to fix landscape on mobile

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,6 +4,7 @@
   max-width: 21.1rem;
   border-radius: 15px;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  justify-self: center;
 }
   
 .card > .img-wrapper {
