--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -13,7 +13,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 2rem;
-  /* justify-content: center;
-  align-content: center; */
+  justify-content: space-evenly;
+  /* justify-items: center; */
 }
 
